update engines for azure

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "description": "winner-pov",
   "author": "Brandon Kuchnicki",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": [
     "gatsby"
   ],
